--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,9 +17,13 @@
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
+
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.willvargas.telemetria_esp8266.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_agregarEquipoFragment"
+        android:name="com.willvargas.telemetria_esp8266.ui.AgregarEquipoFragment"
+        android:label="AgregarEquipoFragment" />
+    <fragment
+        android:id="@+id/nav_equipoFragment"
+        android:name="com.willvargas.telemetria_esp8266.ui.equipoFragment"
+        android:label="equipoFragment" />
 </navigation>
