--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:background="@android:color/darker_gray"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:context=".MainActivity">
+        tools:context=".Activities.MainActivity">
 
         <TextView
             android:id="@+id/title_text_view"
