--- a/app/src/main/res/navigation/mobile_navigation_lateral.xml
+++ b/app/src/main/res/navigation/mobile_navigation_lateral.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/nav_agregarEquipoFragment">
 
@@ -17,4 +18,9 @@
         android:id="@+id/nav_borrarEquipoFragment"
         android:name="com.willvargas.telemetria_esp8266.ui.BorrarEquipoFragment"
         android:label="BorrarEquipoFragment" />
+    <fragment
+        android:id="@+id/nav_listFragment"
+        android:name="com.willvargas.telemetria_esp8266.ui.list.ListFragment"
+        android:label="fragment_list"
+        tools:layout="@layout/fragment_list" />
 </navigation>
