--- a/app/src/main/res/navigation/mobile_navigation_lateral.xml
+++ b/app/src/main/res/navigation/mobile_navigation_lateral.xml
@@ -9,18 +9,27 @@
     <fragment
         android:id="@+id/nav_agregarEquipoFragment"
         android:name="com.willvargas.telemetria_esp8266.ui.AgregarEquipoFragment"
-        android:label="AgregarEquipoFragment" />
-    <fragment
-        android:id="@+id/nav_equipoFragment"
-        android:name="com.willvargas.telemetria_esp8266.ui.equipoFragment"
-        android:label="equipoFragment" />
+        android:label="Agregar Equipo" />
     <fragment
         android:id="@+id/nav_borrarEquipoFragment"
         android:name="com.willvargas.telemetria_esp8266.ui.BorrarEquipoFragment"
-        android:label="BorrarEquipoFragment" />
+        android:label="Borrar Equipo" />
     <fragment
         android:id="@+id/nav_listFragment"
         android:name="com.willvargas.telemetria_esp8266.ui.list.ListFragment"
-        android:label="fragment_list"
-        tools:layout="@layout/fragment_list" />
+        android:label="Lista de Equipos"
+        tools:layout="@layout/fragment_list" >
+        <action
+            android:id="@+id/action_nav_listFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.willvargas.telemetria_esp8266.DetailFragment"
+        android:label="Informacion"
+        tools:layout="@layout/fragment_detail" >
+        <argument
+            android:name="equipo"
+            app:argType="com.willvargas.telemetria_esp8266.data.server.EquiposServer" />
+    </fragment>
 </navigation>
