se recibe informacion del contador de la base de datos en tiempo real

--- a/app/src/main/res/navigation/mobile_navigation_bottom.xml
+++ b/app/src/main/res/navigation/mobile_navigation_bottom.xml
@@ -35,7 +35,7 @@
 
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.willvargas.telemetria_esp8266.DetailFragment"
+        android:name="com.willvargas.telemetria_esp8266.ui.list.DetailFragment"
         android:label="@string/info_Equip"
         tools:layout="@layout/fragment_detail" >
         <argument
