google maps fragment

--- a/app/src/main/res/layout/fragment_agregar_equipo.xml
+++ b/app/src/main/res/layout/fragment_agregar_equipo.xml
@@ -129,5 +129,12 @@
         android:layout_height="wrap_content"
         android:text="@string/save" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView2"
+        android:name="com.willvargas.telemetria_esp8266.ui.MapsFragment"
+        android:layout_width="0dp"
+        android:layout_height="400dp" />
+
+
 </LinearLayout>
 </ScrollView>
