--- a/app/src/main/res/navigation/mobile_navigation_lateral.xml
+++ b/app/src/main/res/navigation/mobile_navigation_lateral.xml
@@ -9,7 +9,7 @@
     <fragment
         android:id="@+id/nav_mapsFragment"
         android:name="com.willvargas.telemetria_esp8266.ui.MapsFragment"
-        android:label="fragment_maps"
+        android:label="Mapas"
         tools:layout="@layout/fragment_maps" />
 
     <fragment
