--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,12 +15,12 @@
         <item
             android:id="@+id/nav_listFragment"
             android:icon="@drawable/ic_baseline_list"
-            android:title="lista" />
+            android:title="@string/list" />
 
         <item
             android:id="@+id/nav_mapsFragment"
             android:icon="@drawable/ic_baseline_location_on_24"
-            android:title="Mapas" />
+            android:title="@string/maps" />
 
         <item
             android:id="@+id/nav_borrarEquipoFragment"
